--- a/style.css
+++ b/style.css
@@ -85,6 +85,41 @@ button.sign-up{
     font-weight: bold;
 }
 
+.content{
+    display: flex;
+    justify-content: center;
+}
+
+.items ul{
+    list-style: none;
+    display: flex;
+    flex-flow: nowrap row;
+    gap: 24px;
+    margin: 0;
+    padding: 0;
+    justify-content: space-around;    
+}
+
+h2{
+    text-align: center;
+}
+
+.item{
+    width: 150px;
+    text-align: center;
+}
+
+.item img{
+    width: 100px;
+    border-radius: 8px;
+    border: 3px #3882F6;
+    border-style: solid;
+}
+
+.item p{
+    text-align: center;
+}
+
 .footer {
 
 }
